<resources>
    <string name="app_name">PO Test</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="ping_ocean">Ping Ocean</string>
    <string name="login">Войти</string>
    <string name="auth_error">Incorrect email or password</string>
    <string name="logout">Выйти</string>
    <string name="nameTitle">Name:</string>
    <string name="tvEmailTitle">Email:</string>
    <string name="phoneTitle">Phone:</string>
    <string name="companyTitle">Company:</string>
    <string name="sectionsTitle">Sections</string>
    <string name="profile_image">Profile image</string>
</resources>