<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="144dp"
        android:layout_height="144dp"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/avatars"
        android:contentDescription="@string/profile_image" />

    <Button
        android:id="@+id/btnLogout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/logout"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tvNameTitle"
        style="@style/TvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:text="@string/nameTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <TextView
        android:id="@+id/tvEmailTitle"
        style="@style/TvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/tvEmailTitle"
        app:layout_constraintStart_toStartOf="@+id/tvNameTitle"
        app:layout_constraintTop_toBottomOf="@+id/tvNameTitle" />

    <TextView
        android:id="@+id/tvPhoneTitle"
        style="@style/TvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/phoneTitle"
        app:layout_constraintStart_toStartOf="@+id/tvEmailTitle"
        app:layout_constraintTop_toBottomOf="@+id/tvEmailTitle" />

    <TextView
        android:id="@+id/tvCompanyNameTitle"
        style="@style/TvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/companyTitle"
        app:layout_constraintStart_toStartOf="@+id/tvPhoneTitle"
        app:layout_constraintTop_toBottomOf="@+id/tvPhoneTitle" />

    <TextView
        android:id="@+id/tvName"
        style="@style/TvTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintBottom_toBottomOf="@+id/tvNameTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tvNameTitle"
        app:layout_constraintTop_toTopOf="@+id/tvNameTitle"
        tools:text="Name" />

    <TextView
        android:id="@+id/tvEmail"
        style="@style/TvTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintBottom_toBottomOf="@+id/tvEmailTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tvEmailTitle"
        app:layout_constraintTop_toTopOf="@+id/tvEmailTitle"
        tools:text="Email" />

    <TextView
        android:id="@+id/tvPhone"
        style="@style/TvTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintBottom_toBottomOf="@+id/tvPhoneTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tvPhoneTitle"
        app:layout_constraintTop_toTopOf="@+id/tvPhoneTitle"
        tools:text="Phone" />

    <TextView
        android:id="@+id/tvCompanyName"
        style="@style/TvTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintBottom_toBottomOf="@+id/tvCompanyNameTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tvCompanyNameTitle"
        app:layout_constraintTop_toTopOf="@+id/tvCompanyNameTitle"
        tools:text="Company Name" />

    <EditText
        android:id="@+id/edSections"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:ems="10"
        android:enabled="false"
        android:gravity="start|top"
        android:inputType="textMultiLine"
        app:layout_constraintBottom_toTopOf="@+id/btnLogout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvSectionTitle"
        tools:ignore="LabelFor,SpeakableTextPresentCheck"
        android:importantForAutofill="no" />

    <TextView
        android:id="@+id/tvSectionTitle"
        style="@style/TvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/sectionsTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvCompanyNameTitle" />
</androidx.constraintlayout.widget.ConstraintLayout>